RRTB-14: Add CloudFormation and IAM permissions to GitHub Actions policy